#+TITLE: TECHNICAL EXERCISE (Vue)
#+AUTHOR: Cristian D. Moreno \\
#+AUTHOR: Senior Full Stack Web Developer \\
#+AUTHOR: Villavicencio/Colombia | +573022539479 | [[mailto:kyonax.corp@gmail.com][kyonax.corp@gmail.com]] | [[https://www.linkedin.com/in/kyonax/][Linkedin]] | [[https://github.com/Kyonax][Github]] | [[https://kyonax.github.io][Personal Web]]
#+OPTIONS: toc:t num:t date:nil H:5

This file documents the commits and version control actions for this specific technical assesment based in time.

* TABLE OF CONTENTs :toc:
- [[#project-changes][PROJECT CHANGEs]]
  - [[#2025-09-29-1903-gmt-5-configuration--project-set-up][2025-09-29 19:03 (GMT-5), Configuration & Project Set-up]]

* PROJECT CHANGEs
** 2025-09-29 19:03 (GMT-5), Configuration & Project Set-up
- *Set-Up & Configuration:*
  - [[file:eslint.config.ts][ESlint]] with specific Code Guidelines
  - SASS Styling Configuration [[file:vite.config.ts][vite.config.ts]], [[file:src/main.ts][main.ts]]
  - PostCSS for cross-web-browser support [[file:postcss.config.js][postcss.config]]
  - Vite Default Set-up [[file:vite.config.ts][vite.config.ts]]
    - Add =@= alias -> =src/=
  - Index HTML Set-up

- *Documentation and Planning:*
  - Creation of [[file:CHALLENGE.org][CHALLENGE.org]] | TE Context.
  - Creation of CHANGELOG.org | This File History.
  - First Additions to [[file:README.org][README.org]]