@@ -1,0 +1,45 @@
+name: technical-exercise-madison-reed - CI Build and Deploy to build-dev
+
+on:
+  push:
+    branches:
+      - develop
+  pull_request:
+    branches:
+      - develop
+
+jobs:
+  lint-build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Run ESLint
+        run: npm run lint:eslint
+
+      - name: Run Oxlint
+        run: npm run lint:oxlint
+
+      - name: Run Type Check
+        run: npm run type-check
+
+      - name: Build App
+        run: npm run build
+
+      - name: Push to build-dev
+        uses: s0/git-publish-subdir-action@develop
+        env:
+          REPO: self
+          BRANCH: build-dev
+          FOLDER: dist
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MESSAGE: "Build in Dev Environment: ({sha}) {msg}"
